# House_Price_Prediction

./: .env.example  .gitignore  API_USAGE.md  CENSUS_API_ALTERNATIVES_COMPARISON_MATRIX.md  CENSUS_API_ALTERNATIVES_DECISION_GUIDE.md  CENSUS_API_ALTERNATIVES_EXECUTIVE_SUMMARY.md  CENSUS_API_ALTERNATIVES_IMPLEMENTATION.md  CENSUS_API_ALTERNATIVES_INDEX.md  CENSUS_API_ALTERNATIVES_RESEARCH.md  FINAL_MODEL_SELECTION.md  GEOCODING_CENSUS_API_GUIDE.md  LIVE_API_FEATURES.md  Makefile  PRODUCTION_MODEL.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  dashboard.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_api.py  smart_price_prediction.py  test_actual_redfin_property.py  test_georgia_homes.py  test_real_property.py
.streamlit/: config.toml
data/raw/: .gitkeep
notebooks/: explore_data.ipynb
scripts/: bootstrap_training_data.py  build_training_pipeline.py  combined_top28_features.py  convert_joblib_to_pkl.py  export_live_feature_candidates.py  lightgbm_16_combined_features.py  live_address_audit.py  predict.py  train.py  train_from_splits.py
src/house_price_prediction/: __init__.py  address_to_price.py  app.py  config.py  data.py  features.py  improved_model.py  luxury_estate_model.py  model.py  model_random_forest.py  predict.py
src/house_price_prediction.egg-info/: PKG-INFO  SOURCES.txt
src/house_price_prediction/api/: main.py
src/house_price_prediction/api/routers/: health.py  meta.py
src/house_price_prediction/domain/contracts/: prediction_contracts.py
tests/: test_api_backend.py  test_feature_policy.py  test_smoke.py
(+4 files in other folders)
